<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="home">首页</string>
    <string name="statistics">统计</string>
    <string name="accounts">账户</string>
    <string name="add">记一笔</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="balance">余额</string>
    <string name="total_income">总收入</string>
    <string name="total_expense">总支出</string>
    <string name="recent_transactions">最近记录</string>
    <string name="category">分类</string>
    <string name="amount">金额</string>
    <string name="date">日期</string>
    <string name="note">备注</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="food">餐饮</string>
    <string name="transport">交通</string>
    <string name="shopping">购物</string>
    <string name="entertainment">娱乐</string>
    <string name="education">教育</string>
    <string name="health">医疗</string>
    <string name="housing">住房</string>
    <string name="salary">工资</string>
    <string name="bonus">奖金</string>
    <string name="investment">投资</string>
    <string name="other">其他</string>
    <string name="select_date">选择日期</string>
    <string name="please_enter_amount">请输入金额</string>
    <string name="please_select_category">请选择分类</string>
    <string name="transaction_saved">记录已保存</string>
    <string name="transaction_deleted">记录已删除</string>
    <string name="quick_amount">快捷金额</string>
</resources>
